# plugin.video.crunchyroll

./: .gitignore  README.md  addon.xml  default.py  pyproject.toml  pytest.ini
resources/: settings.xml
resources/language/resource.language.de_de/: strings.po
resources/language/resource.language.en_gb/: strings.po
resources/language/resource.language.es_es/: strings.po
resources/language/resource.language.fr_fr/: strings.po
resources/language/resource.language.pt_br/: strings.po
resources/lib/: api.py  auth.py  context.py  controller.py  controller_helpers.py  crunchyroll.py  globals.py  globals.py.deprecated  gui.py  http_utils.py  library.py  model.py  model.py.deprecated  modes.py  presentation.py  proxy.py  router.py  utils.py  utils.py.deprecated  videoplayer.py  videostream.py  view.py
resources/lib/addons/: upnext.py  utils.py
tests/: .env.example  README.md  capture_responses.py  conftest.py
tests/fixtures/: api_responses.py  session_manager.py  token_manager.py
tests/integration/: conftest.py  test_auth_flow.py  test_content_api.py  test_streaming_api.py
tests/unit/: test_api_auth.py  test_api_content.py  test_api_exception_handling.py  test_api_streaming.py  test_auth_manager.py  test_context.py  test_controller_helpers.py  test_get_json_from_response.py  test_get_listables.py  test_model_mapping.py  test_models_base.py  test_modes.py  test_no_legacy_facades.py  test_presentation.py  test_profile_to_item.py  test_proxy.py  test_response_models.py  test_utils_datetime.py  test_utils_modules.py  test_videoplayer.py  test_videostream.py
(+17 files in other folders)
